[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "slow-start-rewatch"
version = "0.1.8"
description = "Make cute things happen!"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/slow-start-fans/slow-start-rewatch"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
importlib_metadata = "^1.6.0"
structlog = "^20.1.0"
colorama = "^0.4.3"
anyconfig = "^0.9.11"
flask = "^1.1.2"
praw = "^7.0.0"
"ruamel.yaml" = "^0.16.10"
scalpl = "^0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.1"
nitpick = "^0.22"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.9"
pytest-randomly = "^3.3"

sphinx = "^2.2"
sphinx-autodoc-typehints = "<1.11"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.6"
autopep8 = "^1.5.2"

[tool.poetry.scripts]
slow-start-rewatch = "slow_start_rewatch.__main__:main"
